--- a/Проэкт/Style/style.css
+++ b/Проэкт/Style/style.css
@@ -192,7 +192,7 @@ body{
 }
 
 .grid_center{
-    max-width: 588px;
+    
 }
 
 .grid_h3{
@@ -363,11 +363,17 @@ body{
     .background_text-p{
         padding-bottom: 60px;
     }
-
-
+    
 
     .flex_inbox-column{
         flex-direction: column-reverse;
+    }
+
+    .image_grid{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 30px;
+        max-width: 100%;
     }
 
     .grid_background{
@@ -434,6 +440,7 @@ body{
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 30px 45px;
+        max-width: 100%;
     }
 
     .img_item:nth-child(2){
@@ -568,14 +575,18 @@ body{
 
     .grid_button{
         width: 290px;
-        margin: 12px auto;
+        margin-bottom: 40px;
+    }
+
+    .grid_button-1{
+        margin-bottom: 12px;
     }
 
     .grid{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 1fr);
         gap: 15px;
-        padding-top: 40px;
+        
     }
 
     .inbox{
